Created base architecture and added entities

--- a/R-Nox/appsettings.json
+++ b/R-Nox/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=r-nox;User Id=postgres;Password=admin;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
