Added commands and queries for assembly and modules

--- a/R-Nox.Application/R-Nox.Application.csproj
+++ b/R-Nox.Application/R-Nox.Application.csproj
@@ -11,4 +11,15 @@
       <ProjectReference Include="..\R-Nox.Db\R-Nox.Db.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MediatR" Version="12.2.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Commands\Telemetry\" />
+      <Folder Include="Handlers\Telemetry\" />
+      <Folder Include="Models\DTOs\Telemetry\" />
+      <Folder Include="Queries\Telemetry\" />
+    </ItemGroup>
+
 </Project>
