Added commands and queries for Telemetries

--- a/R-Nox.Host/appsettings.json
+++ b/R-Nox.Host/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=r-nox;User Id=postgres;Password=admin;"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=r-nox;User Id=postgres;Password=admin;Include Error Detail=true"
   },
   "Logging": {
     "LogLevel": {
