Added GlobalExceptionHandlerMiddleware and done task

--- a/R-Nox.Db/R-Nox.Db.csproj
+++ b/R-Nox.Db/R-Nox.Db.csproj
@@ -12,7 +12,12 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\R-Nox.Domain\R-Nox.Domain.csproj" />
     </ItemGroup>
 
 </Project>
